--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,8 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Base
-        uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
           # The following scopes are required:
@@ -30,14 +29,15 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           base_hireable: yes
-          config_timezone: Europe/Moscow
-          plugin_introduction: yes
-          plugin_introduction_title: yes
+          config_timezone: Asia/Jerusalem
           plugin_languages: yes
+          plugin_languages_aliases: javascript:JS,typescript:TS
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
+          plugin_languages_details: percentage
+          plugin_languages_ignored: html, css
           plugin_languages_limit: 8
           plugin_languages_other: yes
           plugin_languages_recent_categories: markup, programming
@@ -45,7 +45,3 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
-          plugin_pagespeed: yes
-          plugin_pagespeed_detailed: yes
-          plugin_pagespeed_url: .user.website
-          
