--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,15 +29,24 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           base_hireable: yes
+          base_indepth: yes
           config_timezone: Asia/Jerusalem
+          plugin_habits: yes
+          plugin_habits_charts_type: classic
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_from: 200
+          plugin_habits_languages_limit: 8
+          plugin_habits_languages_threshold: 0%
           plugin_languages: yes
-          plugin_languages_aliases: javascript:JS,typescript:TS
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_details: percentage
           plugin_languages_ignored: html, css
+          plugin_languages_indepth: yes
+          plugin_languages_indepth_custom: Diamond-Studio/*,DITTeam/*,RoyalArena/*
           plugin_languages_limit: 8
           plugin_languages_other: yes
           plugin_languages_recent_categories: markup, programming
@@ -45,3 +54,5 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          repositories_affiliations: owner, contributor
+          repositories_forks: yes
