--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -51,4 +51,4 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
-          repositories_affiliations: owner,collaborator
+          repositories_affiliations: owner
